--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -463,4 +463,13 @@
   <data name="dice1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\dice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="marchand" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\marchand.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dead" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\dead.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="guerisseur" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\guerisseur.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
