--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -346,9 +346,6 @@
   <data name="city40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\city40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="todel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\todel.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="bar34" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\bar34.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -471,5 +468,8 @@
   </data>
   <data name="guerisseur" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\guerisseur.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="footprint" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\footprint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
